# mujoco-physx-benchmark

./: CMakeLists.txt  README.md  clear.sh  run_build.sh
benchmark/: CMakeLists.txt  sim.sh.in
benchmark/include/: 666Benchmark.hpp  AnymalEnergyBenchmark.hpp  AnymalMomentumBenchmark.hpp  AtlasContactBenchmark.hpp  BenchmarkTest.hpp  BouncingBenchmark.hpp  Elastic666Benchmark.hpp  KaplaBenchmark.hpp
benchmark/mujocoSim/: 666Benchmark.cpp  AnymalMomentumBenchmark.cpp  AnymalPDBenchmark.cpp  AtlasDemo.cpp  CMakeLists.txt  KaplaBenchmark.cpp  MjcBenchmark.hpp
benchmark/physxSim/: 666Benchmark.cpp  AnymalEnergyBenchmark.cpp  AnymalMomentumBenchmark.cpp  AnymalPDBenchmark.cpp  AtlasContactBenchmark.cpp  BouncingBenchmark.cpp  CMakeLists.txt  Elastic666Benchmark.cpp  KaplaBenchmark.cpp  PyXBenchmark.hpp  RollingBenchmark.cpp
benchmark/res/shell/: 666-elastic.sh  666.sh  anymal-energy.sh  anymal-momentum.sh  anymal-pd.sh  atlas-contact.sh  bouncing.sh  kapla.sh  rolling.sh
benchmark/res/yaml/: 666.yaml
lib/: CMakeLists.txt  README.md
lib/raicommon/include/raiCommon/utils/rai_logger/: RAI_logger.hpp
lib/raicommon/include/raiCommon/utils/rai_timer/: RAI_timer.hpp
lib/raigraphics/include/raiGraphics/: config.hpp
res/benchmark/ANYmal-PD-benchmark/mujoco/: robot1.urdf  robot100.urdf  robot121.urdf  robot144.urdf  robot16.urdf  robot169.urdf  robot196.urdf  robot25.urdf  robot36.urdf  robot4.urdf  robot49.urdf  robot64.urdf  robot81.urdf  robot9.urdf
res/benchmark/ANYmal-energy-benchmark/mujoco/: robot.urdf
res/benchmark/Atlas-contact-benchmark/mujoco/: robot1.urdf  robot16.urdf  robot25.urdf  robot4.urdf  robot9.urdf
res/demo/mujoco/Atlas/: robot.urdf
sim/: CMakeLists.txt
sim/common/: CMakeLists.txt  Configure.hpp  UserHandle.hpp  WorldRG.cpp  WorldRG.hpp  math.hpp
sim/common/interface/: ArticulatedSystemInterface.hpp  CheckerboardInterface.hpp  SingleBodyObjectInterface.hpp  WorldInterface.hpp
sim/dartSim/: CMakeLists.txt
sim/dartSim/src/: DartSim.cpp
sim/dartSim/src/object/: DartArticulatedSystem.cpp  DartArticulatedSystem.hpp
sim/mujocoSim/: CMakeLists.txt
sim/mujocoSim/src/: MjcSim.cpp  MjcSim.hpp  MjcWorld.cpp  MjcWorld.hpp  UserHandle.hpp
sim/mujocoSim/src/object/: MjcBox.cpp  MjcBox.hpp  MjcCapsule.cpp  MjcCapsule.hpp  MjcCheckerBoard.cpp  MjcCheckerBoard.hpp  MjcCylinder.cpp  MjcCylinder.hpp  MjcSingleBodyObject.cpp  MjcSingleBodyObject.hpp  MjcSphere.cpp  MjcSphere.hpp
sim/mujocoSim/test/: SpeedTest.cpp
sim/physxSim/: CMakeLists.txt
sim/physxSim/src/: PyXSim.cpp  PyXSim.hpp  PyXWorld.cpp  PyXWorld.hpp  UserHandle.hpp
sim/physxSim/src/object/: PyXArticulatedSystem.cpp  PyXArticulatedSystem.hpp  PyXBox.cpp  PyXBox.hpp  PyXCapsule.cpp  PyXCapsule.hpp  PyXCheckerBoard.cpp  PyXCheckerBoard.hpp  PyXCylinder.cpp  PyXCylinder.hpp  PyXSingleBodyObject.cpp  PyXSingleBodyObject.hpp  PyXSphere.cpp  PyXSphere.hpp
